# karkhana

./: .env.example  .env.local.example  .gitignore  .graphify_detect.json  .openclaude-profile.json  AGENTS.md  Makefile  PROJECT_ANALYSIS.md  PROJECT_CONTEXT.md  README.md  agent_templates.json  amplify.yml  architecture.md  docker-compose.floci.yml  litellm-config.yaml  litellm-test-config.yaml  opencode.json  package-lock.json  package.json  playwright.config.js  process_logo.py  push-fixes.bat  push-fixes.ps1  pyproject.toml  pyrightconfig.json  requirements.txt  setup-worker-app.bat  setup.py  skills-lock.json  start.bat  start.ps1  start.sh  test_e2e.py  test_enqueue.py  test_pipeline.py
.codex/: hooks.json  hooks.json.bak-graphify-hook-20260513-004350
.github/: dependabot.yml
.hermes/: auth.json  config.yaml  models_dev_cache.json
.opencode/: agent-skills.json
.sisyphus/: boulder.json
cli/: README.md  package-lock.json  package.json
design-notes/: ci-cd-improvements.md  circuit-breaker-strategy.md  codex-engine-karigar.md  codex-handoff-redesign.md  cost-attribution-system.md  factory-orchestrator-scaling.md  gpt55-proposals-20260505.md  hybrid-memory-strategy.md  progress-nextaction-engine.md  worker-websocket-protocol.md
docs/: aws-retirement.md  factory-run-ledger.md  local-dev.md  local-first-floci.md  local-floci.md  ops-guide.md
e2e/: idea-lifecycle.spec.js  idea-relationships.spec.js  research-flow.spec.js
examples/: README_EXAMPLES.md  sample_idea.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
worker-app/src-tauri/: Cargo.toml  tauri.conf.json
worker-app/src-tauri/capabilities/: default.json
worker-app/src-tauri/src/: agent.rs  api.rs  branch_work.rs  circuit_breaker.rs  config.rs  error.rs  git.rs  indexing.rs  lib.rs  litellm.rs  main.rs  opencode_session.rs  pairing.rs  retry.rs  sandbox.rs  sqs.rs  state.rs  tray.rs  types.rs  updater.rs  worker.rs
worker-app/src-tauri/tests/: config_sandbox_tests.rs  integration_test.rs  opencode_worker_tests.rs
(+395 files in other folders)
