[package]
name = "idearefinery-worker"
version = "0.1.0"
edition = "2021"

[lib]
name = "idearefinery_worker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
aws-sdk-sqs = "1"
walkdir = "2"
ignore = "0.4"
dirs = "5"
which = "7"
hostname = "0.4"
shellexpand = "3"
url = "2"
